# musicRAG_ETL

./: .gitignore  AGENTS.md  GEMINI.md  README.md  notes.txt  pyproject.toml  setup.cfg  setup.py
.tmp_dagster_home_2h61nyur/history/: runs.db
.tmp_dagster_home_2h61nyur/history/runs/: .db  317d8e09-e009-4a56-8f8b-443beffbad5b.db  index.db  index.db-shm
.tmp_dagster_home_2h61nyur/schedules/: schedules.db
.tmp_dagster_home_2h61nyur/storage/317d8e09-e009-4a56-8f8b-443beffbad5b/compute_logs/: zxaxtzkg.err  zxaxtzkg.out
.tmp_dagster_home_2l22ly91/history/: runs.db
.tmp_dagster_home_2l22ly91/history/runs/: index.db
.tmp_dagster_home_2l22ly91/schedules/: schedules.db
.tmp_dagster_home_3c1zjwo6/history/: runs.db
.tmp_dagster_home_3c1zjwo6/history/runs/: index.db
.tmp_dagster_home_3c1zjwo6/schedules/: schedules.db
.tmp_dagster_home_wsup9tci/history/runs/: index.db-shm  index.db-wal
scripts/: __init__.py  erase_memgraph.py  query_chromadb.py  query_embeddings.py  visualize_chroma_db.py
scripts_validation/: validate_duplicates.py  view_chromadb_embeddings.py
src/music_rag_etl/: __init__.py  assets.py  definitions.py  query_chromadb.py  settings.py
src/music_rag_etl/assets/: __init__.py
src/music_rag_etl/assets/extraction/: 2_fetch_wikipedia_articles.py  3_extract_artists.py  __init__.py  albums_extraction_assets.py  artist__indexes_extraction_assets.py  artist_extraction_assets.py  build_artist_index.py  (+11 more)
src/music_rag_etl/data/: artists.jsonl  genres.jsonl  tracks.jsonl
src/music_rag_etl/utils/: __init__.py  chroma_helpers.py  concurrency_helpers.py  extraction_helpers.py  io_helpers.py  lastfm_helpers.py  memgraph_helpers.py  models.py  request_utils.py  sparql_queries.py  transformation_helpers.py  wikidata_helpers.py  wikipedia_helpers.py
src/music_rag_etl_tests/utils/: test_concurrency_helpers.py  test_extraction_helpers.py  test_io_helpers.py  test_lastfm_helpers.py  test_request_utils.py  test_transformation_helpers.py  test_wikidata_helpers.py
(+16 files in other folders)
